# standout

./: .gitignore  .markdownlintignore  .readthedocs.yaml  .release-sync-state.yaml  ARCHITECTURE_REVIEW.md  CHANGELOG.md  CLAUDE.md  CNAME  Cargo.toml  README.md  book.toml  mkdocs.yml  palette_compare.sh  release.toml  rust-toolchain.toml
crates/outstanding/: Cargo.toml  LICENSE  README.md  release.toml
crates/outstanding-clap/: Cargo.toml  README.md
crates/outstanding-clap/docs/: hooks.md  using-with-clap.md
crates/outstanding-clap/examples/: dispatch_derive_example.rs  sample_app.rs
crates/outstanding-clap/examples/topics/: formatting.txt
crates/outstanding-clap/src/: dispatch.rs  group.rs  handler.rs  help_template.txt  help_theme.yaml  hooks.rs  lib.rs  macros.rs  outstanding.rs  topic_template.txt  topics_list_template.txt
crates/outstanding-clap/src/help/: data.rs  render.rs
crates/outstanding-clap/tests/: clap_app.rs  dispatch_derive.rs
crates/outstanding-macros/: Cargo.toml
crates/outstanding-macros/src/: dispatch.rs  embed.rs  lib.rs
crates/outstanding-macros/src/tabular/: attrs.rs  derive_row.rs  derive_tabular.rs  mod.rs
crates/outstanding/scripts/: pre-commit
crates/outstanding/src/: context.rs  embedded.rs  file_loader.rs  lib.rs  output.rs  setup.rs  topic_template.txt  topics.rs  topics_list_template.txt  util.rs
crates/outstanding/src/cli/: app.rs  dispatch.rs  group.rs  handler.rs  hooks.rs  macros.rs  mod.rs  outstanding.rs  result.rs
crates/outstanding/src/render/: filters.rs  functions.rs  mod.rs  registry.rs  renderer.rs
crates/outstanding/src/rendering/: context.rs  mod.rs  prelude.rs
crates/outstanding/src/stylesheet/: color.rs  css_parser.rs  error.rs  mod.rs  parser.rs  registry.rs
crates/outstanding/src/table/: filters.rs  formatter.rs  mod.rs  resolve.rs  types.rs  util.rs
crates/outstanding/src/theme/: adaptive.rs  mod.rs  theme.rs
crates/outstanding/tests/: dispatch_derive.rs  embed_macros.rs  nesting.rs  tabular_derive.rs
crates/standout/: Cargo.toml  README.md  release.toml
crates/standout-bbparser/: Cargo.toml
crates/standout-bbparser/src/: lib.rs
crates/standout-dispatch/: Cargo.toml  README.md
crates/standout-dispatch/docs/guides/: intro-to-dispatch.md
crates/standout-dispatch/docs/topics/: app-state.md  execution-model.md  handler-contract.md  partial-adoption.md
crates/standout-dispatch/src/: crud.rs  dispatch.rs  handler.rs  hooks.rs  lib.rs  output.rs  render.rs  resource.rs  serialize.rs  verify.rs
crates/standout-input/: Cargo.toml  README.md
crates/standout-input/docs/: design.md
crates/standout-input/docs/guides/: intro-to-input.md
crates/standout-input/docs/topics/: backends.md  framework-integration.md  input-sources.md  interactive-flows.md
crates/standout-input/src/: chain.rs  collector.rs  env.rs  error.rs  inputs.rs  lib.rs  responder.rs
crates/standout-input/src/sources/: arg.rs  clipboard.rs  default.rs  editor.rs  env.rs  inquire_adapters.rs  mod.rs  prompt.rs  stdin.rs
crates/standout-input/tests/: integration.rs
crates/standout-macros/: Cargo.toml
crates/standout-macros/src/: command.rs  crud.rs  dispatch.rs  embed.rs  handler.rs  lib.rs  resource.rs
crates/standout-macros/src/seeker/: attrs.rs  derive.rs  mod.rs
crates/standout-macros/src/tabular/: derive_tabular.rs
crates/standout-pipe/: Cargo.toml
crates/standout-pipe/docs/topics/: piping.md
crates/standout-pipe/src/: lib.rs  pipe.rs  platform.rs  shell.rs
crates/standout-render/: Cargo.toml  README.md
crates/standout-render/docs/guides/: intro-to-rendering.md  intro-to-tabular.md
crates/standout-render/docs/topics/: file-system-resources.md  styling-system.md  template-engines.md  templating.md
crates/standout-render/examples/: table_row_styles.rs
crates/standout-render/src/: colorspace.rs  context.rs  embedded.rs  environment.rs  error.rs  file_loader.rs  lib.rs  output.rs  prelude.rs  util.rs  warnings.rs
crates/standout-render/src/style/: attributes.rs  color.rs  css_parser.rs  definition.rs  error.rs  file_registry.rs  mod.rs  parser.rs  registry.rs  value.rs
crates/standout-render/src/tabular/: decorator.rs  filters.rs  formatter.rs  mod.rs  resolve.rs  traits.rs  types.rs  util.rs
crates/standout-render/src/template/: engine.rs  filters.rs  functions.rs  mod.rs  registry.rs  renderer.rs  simple.rs
crates/standout-render/src/theme/: adaptive.rs  icon_def.rs  icon_mode.rs  mod.rs  theme.rs
crates/standout-seeker/: Cargo.toml
crates/standout-seeker/src/: clause.rs  error.rs  lib.rs  op.rs  ordering.rs  parse.rs  query.rs  traits.rs  value.rs
crates/standout-seeker/tests/: coverage.rs  proptest.rs
crates/standout-test/: Cargo.toml
crates/standout-test/src/: lib.rs
crates/standout-test/tests/: harness.rs
crates/standout/src/: lib.rs  setup.rs  topics.rs
crates/standout/src/assets/: mod.rs  templates.rs
crates/standout/src/cli/: app.rs  core.rs  dispatch.rs  group.rs  handler.rs  hooks.rs  local_app.rs  local_builder.rs  mod.rs  mode.rs
crates/standout/src/views/: create_view.rs  delete_view.rs  detail_view.rs  list_view.rs  message.rs  mod.rs  update_view.rs
crates/standout/tests/: app_integration.rs  command_macro.rs  crud_store.rs  crud_views.rs  dispatch_derive.rs  embed_macros.rs  handler_macro.rs  help_command_groups.rs  input_integration.rs  issue_89_late_binding.rs  list_view.rs  list_view_macro.rs  local_app_theme.rs  nesting.rs  output_mode_matrix.rs  piping_integration.rs  property_rendering.proptest-regressions  property_rendering.rs  resource_defaults.rs  resource_macro_integration.rs  resource_shortcuts.rs  resource_store.rs  resource_types.rs  resource_validify.rs  resource_views.rs  seekable_derive.rs  snapshots.rs  tabular_derive.rs  verification_integration.rs  verify_edge_cases.rs
crates/standout/tests/snapshots/: snapshots__error_output.snap  snapshots__json_list_output.snap  (+1 more)
crates/todo-example/: Cargo.toml  README.md
crates/todo-example/src/: handlers.rs  lib.rs  main.rs  store.rs
crates/todo-example/tests/: integration.rs
(+161 files in other folders)
