[package]
name = "outstanding-clap"
version = "0.4.0"
edition = "2021"
description = "Clap integration for Outstanding template engine - topics and styled help"
license = "MIT"
keywords = ["cli", "clap", "help", "terminal", "styling"]
categories = ["command-line-interface"]
repository = "https://github.com/arthur-debert/outstanding-rs"

[[bin]]
name = "test-notes-app"
path = "src/bin/test_notes_app.rs"

[dependencies]
outstanding = { version = "0.4.0", path = "../outstanding" }
clap = { version = "4", features = ["derive", "help"] }
console = "0.15"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
