[package]
name = "outstanding-clap"
version = "0.7.2"
edition = "2021"
description = "Clap integration for Outstanding template engine - topics and styled help"
license = "MIT"
keywords = ["cli", "clap", "help", "terminal", "styling"]
categories = ["command-line-interface"]
repository = "https://github.com/arthur-debert/outstanding-rs"

[[bin]]
name = "test-notes-app"
path = "src/bin/test_notes_app.rs"

[dependencies]
outstanding = { version = "0.7.2", path = "../outstanding" }
anyhow = "1"
clap = { version = "4", features = ["derive", "help"] }
console = "0.15"
minijinja = { version = "2", features = ["loader"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
terminal_size = "0.4"
thiserror = "2.0.17"

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
