[package]
name = "outstanding"
version = "0.2.2"
edition = "2021"
description = "Styled CLI template rendering with automatic terminal detection"
license = "MIT"
keywords = ["cli", "terminal", "colors", "template", "styling"]
categories = ["command-line-interface", "template-engine"]
repository = "https://github.com/arthur-debert/outstanding-rs"
readme = "README.md"

[dependencies]
console = "0.15"
dark-light = "0.2"
minijinja = { version = "2", features = ["loader"] }
once_cell = "1.19"
serde = { version = "1", features = ["derive"] }
unicode-width = "0.2"

[features]
default = []

[dev-dependencies]
serde_json = "1"
