[package]
name = "outstanding"
version = "0.12.0"
edition = "2021"
description = "Styled CLI template rendering with automatic terminal detection"
license = "MIT"
keywords = ["cli", "terminal", "colors", "template", "styling"]
categories = ["command-line-interface", "template-engine"]
repository = "https://github.com/arthur-debert/outstanding-rs"
readme = "README.md"

[dependencies]
console = "0.15"
dark-light = "0.2"
deunicode = "1.6.2"
minijinja = { version = "2", features = ["loader"] }
once_cell = "1.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
quick-xml = { version = "0.36", features = ["serialize"] }
csv = "1.3"
unicode-width = "0.2"
outstanding-macros = { version = "0.12.0", path = "../outstanding-macros", optional = true }

[features]
default = []
macros = ["outstanding-macros"]

[dev-dependencies]
proptest = "1"
tempfile = "3.24.0"
