[package]
name = "standout-dispatch"
version = "2.1.0"
edition = "2021"
description = "Command dispatch and routing for clap-based CLIs"
license = "MIT"
keywords = ["cli", "clap", "dispatch", "command", "routing"]
categories = ["command-line-interface"]
repository = "https://github.com/arthur-debert/standout"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
quick-xml = { version = "0.36", features = ["serialize"] }
csv = "1.3"
anyhow = "1"
thiserror = "2"
atty = "0.2"

[dev-dependencies]
tempfile = "3"
