[package]
name = "standout-dispatch"
version = "3.3.0"
edition = "2021"
description = "Command dispatch and routing for clap-based CLIs"
license = "MIT"
keywords = ["cli", "clap", "dispatch", "command", "routing"]
categories = ["command-line-interface"]
repository = "https://github.com/arthur-debert/standout"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
