[package]
name = "standout-input"
version = "6.0.0"
edition = "2021"
description = "Declarative input collection for CLI applications"
license = "MIT"
keywords = ["cli", "input", "prompt", "editor", "terminal"]
categories = ["command-line-interface"]
repository = "https://github.com/arthur-debert/standout"
readme = "README.md"

[features]
default = ["editor", "simple-prompts"]
editor = ["dep:tempfile", "dep:which", "dep:shell-words"]
simple-prompts = []
inquire = ["dep:inquire"]
# dialoguer = ["dep:dialoguer"]  # Future

[dependencies]
thiserror = "2"
clap = { version = "4", default-features = false, features = ["std"] }

# Optional: editor support
tempfile = { version = "3", optional = true }
which = { version = "7", optional = true }
shell-words = { version = "1", optional = true }

# Optional: inquire prompts
inquire = { version = "0.7", optional = true, features = ["editor"] }

[dev-dependencies]
tempfile = "3"
