[package]
name = "standout-macros"
version = "3.8.0"
edition = "2021"
description = "Proc macros for compile-time resource embedding in Standout"
license = "MIT"
repository = "https://github.com/arthur-debert/standout"
keywords = ["cli", "templates", "macros", "embed"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "parsing"] }

[dev-dependencies]
tempfile = "3"
