[package]
name = "standout-pipe"
version = "4.0.0"
edition = "2021"
description = "Output piping to external commands for CLI applications"
license = "MIT"
keywords = ["cli", "pipe", "shell", "clipboard"]
categories = ["command-line-interface"]
repository = "https://github.com/arthur-debert/standout"

[dependencies]
thiserror = "2"
wait-timeout = "0.2"

[dev-dependencies]
tempfile = "3"
