[package]
name = "standout-render"
version = "3.8.0"
edition = "2021"
description = "Styled terminal rendering with templates, themes, and adaptive color support"
license = "MIT"
keywords = ["cli", "terminal", "colors", "template", "styling"]
categories = ["command-line-interface", "template-engine"]
repository = "https://github.com/arthur-debert/standout"
readme = "README.md"

[dependencies]
console = "0.15"
dark-light = "0.2"
deunicode = "1.6.2"
minijinja = { version = "2", features = ["loader"] }
once_cell = "1.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
quick-xml = { version = "0.36", features = ["serialize"] }
csv = "1.3"
unicode-width = "0.2"
cssparser = "0.31"
standout-bbparser = { version = "3.8.0", path = "../standout-bbparser" }

[dev-dependencies]
tempfile = "3.24.0"
proptest = "1"
serial_test = "3"
