[package]
name = "standout-seeker"
version = "6.0.0"
edition = "2021"
description = "Generic query engine for filtering Rust struct collections"
license = "MIT"
keywords = ["query", "filter", "collection", "search", "predicate"]
categories = ["data-structures", "rust-patterns"]
repository = "https://github.com/arthur-debert/standout"

[dependencies]
regex = "1.11"
thiserror = "2.0"

[dev-dependencies]
proptest = "1.5"
