[package]
name = "standout-test"
version = "7.5.1"
edition = "2021"
description = "In-process test harness for applications built with the standout CLI framework"
license = "MIT"
keywords = ["cli", "testing", "harness", "standout"]
categories = ["command-line-interface", "development-tools::testing"]
repository = "https://github.com/arthur-debert/standout"

[dependencies]
standout = { version = "7.5.1", path = "../standout" }
standout-input = { version = "7.5.1", path = "../standout-input" }
standout-render = { version = "7.5.1", path = "../standout-render" }
clap = { version = "4", features = ["derive", "help"] }
serial_test = "3"
tempfile = "3"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
