[package]
name = "standout"
version = "2.0.0"
edition = "2021"
description = "Styled CLI template rendering with automatic terminal detection"
license = "MIT"
keywords = ["cli", "terminal", "colors", "template", "styling"]
categories = ["command-line-interface", "template-engine"]
repository = "https://github.com/arthur-debert/standout"
readme = "README.md"

[dependencies]
# Core rendering (re-exported from standout-render)
standout-render = { version = "2.0.0", path = "../standout-render" }
standout-bbparser = { version = "2.0.0", path = "../standout-bbparser" }
standout-macros = { version = "2.0.0", path = "../standout-macros", optional = true }

# Direct dependencies (also used by standout-render, but needed here for cli module)
console = "0.15"
deunicode = "1.6.2"
minijinja = { version = "2", features = ["loader"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Optional dependencies for clap integration (feature = "clap")
clap = { version = "4", features = ["derive", "help"], optional = true }
anyhow = { version = "1", optional = true }
terminal_size = { version = "0.4", optional = true }
thiserror = { version = "2", optional = true }
serde_yaml = { version = "0.9", optional = true }
quick-xml = { version = "0.36", features = ["serialize"], optional = true }
csv = { version = "1.3", optional = true }

[features]
default = []
macros = ["standout-macros"]
clap = ["dep:clap", "dep:anyhow", "dep:terminal_size", "dep:thiserror", "dep:serde_yaml", "dep:quick-xml", "dep:csv", "standout-macros"]

[dev-dependencies]
proptest = "1"
tempfile = "3.24.0"
serial_test = "3"
insta = { version = "1.46.1", features = ["yaml", "json"] }
