[package]
name = "standout"
version = "7.6.1"
edition = "2021"
description = "Styled CLI template rendering with automatic terminal detection"
license = "MIT"
keywords = ["cli", "terminal", "colors", "template", "styling"]
categories = ["command-line-interface", "template-engine"]
repository = "https://github.com/arthur-debert/standout"
readme = "README.md"

[dependencies]
# Core rendering (re-exported from standout-render)
standout-render = { version = "7.6.1", path = "../standout-render" }
standout-pipe = { path = "../standout-pipe", version = "7.6.1" }
standout-bbparser = { version = "7.6.1", path = "../standout-bbparser" }
standout-macros = { version = "7.6.1", path = "../standout-macros" }
standout-dispatch = { version = "7.6.1", path = "../standout-dispatch" }
# Heavier input backends (editor — tempfile/which/shell-words; inquire — ~29 deps)
# stay opt-in via the input-editor / input-inquire features below. simple-prompts
# is free (no extra deps) and stays on so basic TextPromptSource works out of
# the box.
standout-input = { version = "7.6.1", path = "../standout-input", default-features = false, features = ["simple-prompts"] }
standout-seeker = { version = "7.6.1", path = "../standout-seeker" }

# Direct dependencies (also used by standout-render, but needed here for cli module)
console = "0.16"
deunicode = "1.6.2"
minijinja = { version = "2", features = ["loader"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI dependencies (formerly optional with clap feature)
clap = { version = "4", features = ["derive", "help"] }
anyhow = "1"
thiserror = "2"
serde_yaml = "0.9"
quick-xml = { version = "0.36", features = ["serialize"] }
csv = "1.3"

[features]
default = []
macros = []

# Opt-in input backends. These re-export feature flags from standout-input
# so that depending on `standout` with `features = ["input-editor"]` is
# equivalent to depending on `standout-input` with that feature directly.
input-editor = ["standout-input/editor"]
input-inquire = ["standout-input/inquire"]

[dev-dependencies]
proptest = "1"
tempfile = "3.24.0"
serial_test = "3"
insta = { version = "1.46.1", features = ["yaml", "json"] }
