[package]
name = "todo-example"
version = "7.6.1"
edition = "2021"
description = "A complete worked example of a Standout-based CLI app"
license = "MIT"
publish = false

[[bin]]
name = "tdoo"
path = "src/main.rs"

[dependencies]
standout = { path = "../standout", version = "7.6.1" }
standout-macros = { path = "../standout-macros", version = "7.6.1" }
standout-dispatch = { path = "../standout-dispatch", version = "7.6.1" }
standout-input = { path = "../standout-input", version = "7.6.1", default-features = false, features = ["simple-prompts"] }

clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[dev-dependencies]
standout-test = { path = "../standout-test", version = "7.6.1" }
serial_test = "3"
tempfile = "3"
